# ScreenCap

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
installer/: ScreenCap.iss
src/: app.rc  resource.h  winmain.cpp
src/capture/: ConvertShader.h  DesktopDuplicator.cpp  DesktopDuplicator.h  FrameData.cpp  FrameData.h  PixelFormats.h  SaveImage.cpp  SaveImage.h  WindowCapture.cpp  WindowCapture.h
src/preview/: PreviewWindow.cpp  PreviewWindow.h  Shaders.h
src/win/: ComInit.cpp  ComInit.h  TrayIcon.cpp  TrayIcon.h  TrayWindow.cpp  TrayWindow.h
